Avoid instantiating Integer objects. Call Integer.valueOf() instead.